# artemis_data_collector

./: .gitignore  Dockerfile  MANIFEST.in  README.md  demo_artemis_failover.py  docker-compose.yml  environment.yml  pyproject.toml
.github/workflows/: publish.yml  unittest.yml
src/artemis_data_collector/: artemis_data_collector.py
src/artemis_data_collector/sql/: report_statusqueue.sql  report_statusqueuemessagecount.sql
tests/: test_artemis_data_collector.py  test_artemis_data_collector_failover.py  test_version.py
tests/data/: broker.xml
